added metadata license for SLUB datasets and fixed some html typos

--- a/daten/index.html
+++ b/daten/index.html
@@ -39,8 +39,9 @@ js: daten.js
 
 		<div class="data-entry" id="start">
 			<p>
-				Diese Kulturdaten und Inhalte stehen unter einer offenen Lizenz und sind daher für jede Person frei nutzbar.</br>
-				</br>
+				Diese Kulturdaten und Inhalte stehen unter einer offenen Lizenz und sind daher für jede Person frei nutzbar.
+			</p>
+			<p>
 				Wir danken allen teilnehmenden Kulturinstitutionen, die durch die Bereitstellung dieser Daten kulturelle Bildung, Kreativität und freies Wissen fördern. 
 			</p>
 			<p>Daten können in der Auswahl gefiltert oder <a href class="navigation-all">komplett angezeigt werden</a></p>
@@ -651,8 +652,9 @@ js: daten.js
 				<div class="data-content">
 					<p>
 						Das <a href="http://www.ehh.uni-jena.de/">Ernst-Haeckel-Haus der Friedrich-Schiller-Universität Jena</a> hat ein ganz spezifisches Profil. Historisch gewachsen ist die Doppelfunktion als Museum und als wissenschaftshistorisches Universitätsinstitut mit angeschlossenen Archiv- und Sammlungsbeständen. Ein neuer Sammlungsschwerpunkt ist die <i>Experimentelle Wissenschaftsgeschichte</i>. 
-						</br>
-						</br>
+					</p>
+
+					<p>
 						Die Sammlung <i>Experimentelle Wissenschaftsgeschichte</i> des Ernst-Haeckel-Hauses umfasst derzeit 31 Instrumente. Als Ergebnis eines studentischen Seminars kann die Sammlung im Portal <a href="http://www.museen.thueringen.de/Objektsuche/|Einrichtung|DE-MUS-873516|">museen.thueringen.de</a> präsentiert werden.
 					</p>
 
@@ -2174,7 +2176,8 @@ js: daten.js
 						-->
 						<dt>Lizenz</dt>
 						<dd class="data-license">
-							<span class="label label-danger">Public Domain</span>
+							Digitalisate: <span class="label label-danger">Public Domain</span><br/>
+							Metadaten: <span class="label label-danger">CC0</span>
 						</dd>
 						<dt>Dateityp</dt>
 						<dd class="data-type">
@@ -2284,7 +2287,8 @@ js: daten.js
 						-->
 						<dt>Lizenz</dt>
 						<dd class="data-license">
-							<span class="label label-danger">Public Domain</span>
+							Digitalisate: <span class="label label-danger">Public Domain</span><br/>
+							Metadaten: <span class="label label-danger">CC0</span>
 						</dd>
 						<dt>Dateityp</dt>
 						<dd class="data-type">
@@ -2334,7 +2338,8 @@ js: daten.js
 						-->
 						<dt>Lizenz</dt>
 						<dd class="data-license">
-							<span class="label label-danger">Public Domain</span>
+							Digitalisate: <span class="label label-danger">Public Domain</span><br/>
+							Metadaten: <span class="label label-danger">CC0</span>
 						</dd>
 						<dt>Dateityp</dt>
 						<dd class="data-type">
@@ -2376,8 +2381,6 @@ js: daten.js
 					<p>
 						Die Metadaten enthalten in aller Regel Angaben zu Maßstab, Format und ggf. Farbigkeit der Karten und Pläne. Kontrolliertes Vokabular: über den Kataloglink als Erschließungselemente erreichbar."
 					</p>
-
-					
 				</div>
 				<div class="data-meta">
 					<dl>
@@ -2417,8 +2420,6 @@ js: daten.js
 					<p>
 						Mit dem von Prof. Iris Wenderholm an der Universität Hamburg durchgeführten Lehr- und Ausstellungsprojekt „Manier, Mythos und Moral“ wurde einer der wertvollsten und für Hamburger Sammlungen der Frühen Neuzeit aussagekräftigsten Teilbestände der Kupferstichsammlung wissenschaftlich erschlossen und digitalisiert. Mit „Manier“ ist der epochengebundene Stil des Manierismus gemeint, mit „Mythos“ wird auf die beliebten Motive aus der antiken Mythologie angespielt und mit „Moral“ werden die durch Bildinschriften zugewiesenen, meist moralischen Deutungen beschrieben. Der Wert der Stiche liegt ohne Zweifel in ihrer künstlerischen Qualität, bei einigen zusätzlich in ihrer Seltenheit. Zugleich spiegelt dieser Teilbestand den Schwerpunkt Hamburger Privatsammlungen wieder, die sich vornehmlich durch niederländische Kunstwerke auszeichneten. Die 161 digitalisierten Kupferstiche zeigen vor allem Allegorien, d.h. Symbole und Personifizierungen, z.B. für verschiedene Charaktere, die fünf Sinne, Tugenden und Sünden der Menschen oder auch für die vier Elemente, Planeten und Kontinente, in einem kunstsinnigen Zusammenspiel von Wort und Bild. Dabei lassen sich die Blätter insog. Denkräume clustern. Darstellungen zum Einfluss der Götter oder Sterne auf die Menschen gehören zu der für die Frühe Neuzeit zentralen Vorstellung einer gegenseitigen Bedingtheit von Mikrokosmos und Makrokosmos. Ordnungssysteme wie Jahres- und Tagzeiten, die Kontinente oder die hier immer wiederkehrende Zahl „vier“ sowie die Allegorisierung menschlicher Fähigkeiten und der Vergänglichkeit des Lebens gehören ebenfalls dazu. Interessant sind die unterschiedlichsten, mitunter sehr ideenreichen und doch ähnlichen Darstellungen der sieben Tugenden und Todsünden. Und schließlich sind da die mythologischen Szenen, die vor allem mit der Darstellung der Götterliebschaftendas Wohl und Weh der Liebe visualisieren. Beinahe jedes Detail, und sei es noch so klein, jede Figur, jedes Objekt, jede Szene ist in diesen Stichen bedeutungsschwanger und damit beachtenswert. Deutungshilfe geben die Texte in den Kupferstichen, die alle übersetzt und publiziert wurden in: Manier, Mythos und Moral: niederländische Druckgraphik um 1600 aus den Beständender Staats- und Universitätsbibliothek Hamburg / Iris Wenderholm (Hg.). Petersberg: Imhof,2014. (Publikationen der Staats- und Universitätsbibliothek Carl von Ossietzky; 6). Die Publikation wird zur Verfügung gestellt. Die Metadaten enthalten in aller Regel Angaben zu den Künstlern, Titeln, Titelreihen, Format und Entstehungsdaten. Kontrolliertes Vokabular: über den Kataloglink als Erschließungselemente erreichbar.
 					</p>
-
-					
 				</div>
 				<div class="data-meta">
 					<dl>
@@ -2444,7 +2445,7 @@ js: daten.js
 						</dd>
 					</dl>
 				</div>
-			</div>
+			</div> -->
 		</div> -->
 
 		<div class="data-entry" id="stiftung-haus-der-geschichte">
@@ -3020,7 +3021,7 @@ js: daten.js
 						<dd>
 							<a href="https://offenedaten.de/storage/f/2015-04-09T09%3A33%3A53.577Z/metadaten-dressel-lebensbeschreibung-1751-1773.csv">Metadaten</a>
 							<a href="http://commons.wikimedia.org/wiki/Category:B%C3%BCrgerverzeichnis_Charlottenburg?uselang=de">Handschrift 1</a><br />
-							Link 2­ - 4 sind noch nicht hochgeladen<br>
+							Link 2­ - 4 sind noch nicht hochgeladen<br/>
 							<a href="http://commons.wikimedia.org/wiki/Category:Armenhaus­Akte_Charlottenburg?uselang=de">Handschrift 5</a>
 						</dd>
 					</dl>
