removed wron html-comment-end-tag

--- a/daten/index.html
+++ b/daten/index.html
@@ -2443,7 +2443,7 @@ js: daten.js
 						</dd>
 					</dl>
 				</div>
-			</div> -->
+			</div>
 		</div> -->
 
 		<div class="data-entry" id="stiftung-haus-der-geschichte">
